--- a/runs/sim-study/notes/test-sim-6-7-5/test-sim-6-7-5.tex
+++ b/runs/sim-study/notes/test-sim-6-7-5/test-sim-6-7-5.tex
@@ -164,11 +164,11 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   temperature chains were swapped when they were proposed to be swapped. The
   ticks on the axes indicate the temperatures. Swapping is occurring between
   most adjacent pairs, and sometimes non-adjacent pairs. But for temperatures
-  (6, 7), (11, 12), (13, 14), and (18, 19), swapping does not occur. The reason
-  for this is that the parameters are in different modes (see $\mu, \sigma^2,
-  Z$). Making the temperature grid finer is necessary to achieve better mixing
-  (propagation of states from hot to cold chains). Note that $\tau=1$ occurs
-  three times. And the probability of swapping is always 1, by construction.}
+  (3, 4), (4, 5), (11, 12), and (12, 13), swapping occurs infrequently,
+  or not at all. The reason for this is that the parameters are in different
+  modes (see $\mu, \sigma^2, Z$). Making the temperature grid finer is
+  necessary to achieve better mixing (propagation of states from hot to cold
+  chains).}
 \end{figure}
 
 \newpage
@@ -210,8 +210,9 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Z1.pdf}{.2}
   \end{center}
-  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
-  the $Z$ matrices are different. Swapping does not occur between those chains.
+  \caption{Note that for temperatures (3, 4), (4, 5), (11, 12), and (12, 13),
+  the $Z$ matrices are different. Swapping is rare between those chains.
+  (Though for (4, 5) and (12, 13), the states start swapping towards the end.)
   Swapping would occur for those chains if the ratio between the larger and smaller
   temperatures were about 1.001. To smoothly transition between $\tau=1$ and
   $\tau=2$ with a temperature granularity of that order would require 700 parallel
@@ -239,12 +240,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y1.pdf}{.2}
   \end{center}
-  \label{fig:yzest}
+  \label{fig:y1est}
   \caption{Note the merging of two of at least the original features in all of
   the scenarios. The merging of two features is reasonable given the size of
   the simulated data. The merging of tree features is more prevalent in higher
   temperatures. Features 1 and 2 were merged into Feature 3 in those
-  cases.}
+  cases. Note differences between (4, 5), (11, 12), and (12, 13).}
 \end{figure}
 
 \newpage
@@ -253,7 +254,7 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y2.pdf}{.2}
   \end{center}
-  \label{fig:yzest}
+  \label{fig:y2est}
 \end{figure}
 
 
@@ -264,8 +265,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{mus_trace.pdf}{.2}
   \end{center}
   \label{fig:mustrace}
-  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
-  the $Z$ matrices are different. Swapping does not occur between those chains.
+  \caption{Note that for temperatures (3, 4), (4, 5), and (11, 12),
+  the $Z$ matrices are different. Swapping is rare between those chains.
   Swapping would occur for those chains if the ratio between the larger and smaller
   temperatures were about 1.001. To smoothly transition between $\tau=1$ and
   $\tau=2$ with a temperature granularity of that order would require 700 parallel
@@ -280,7 +281,7 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \end{center}
   \label{fig:mus}
   \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
-  the $Z$ matrices are different. Swapping does not occur between those chains.
+  the $Z$ matrices are different. Swapping is rare between those chains.
   Swapping would occur for those chains if the ratio between the larger and smaller
   temperatures were about 1.001. To smoothly transition between $\tau=1$ and
   $\tau=2$ with a temperature granularity of that order would require 700 parallel
@@ -294,8 +295,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{sig2_trace.pdf}{.2}
   \end{center}
   \label{fig:sig2trace}
-  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
-  the $Z$ matrices are different. Swapping does not occur between those chains.
+  \caption{Note that for temperatures (3, 4), (4, 5), (11, 12), and (12, 13),
+  the $Z$ matrices are different. Swapping is rare between those chains.
   Swapping would occur for those chains if the ratio between the larger and smaller
   temperatures were about 1.001. To smoothly transition between $\tau=1$ and
   $\tau=2$ with a temperature granularity of that order would require 700 parallel
@@ -309,8 +310,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{sig2.pdf}{.2}
   \end{center}
   \label{fig:sig2}
-  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
-  the $Z$ matrices are different. Swapping does not occur between those chains.
+  \caption{Note that for temperatures (3, 4), (4, 5), (11, 12), and (12, 13),
+  the $Z$ matrices are different. Swapping is rare between those chains.
   Swapping would occur for those chains if the ratio between the larger and smaller
   temperatures were about 1.001. To smoothly transition between $\tau=1$ and
   $\tau=2$ with a temperature granularity of that order would require 700 parallel
