--- a/runs/sim-study/notes/test-sim-6-7-7-test/test-sim-6-7-7-test-N20000.tex
+++ b/runs/sim-study/notes/test-sim-6-7-7-test/test-sim-6-7-7-test-N20000.tex
@@ -53,7 +53,6 @@
 \newcommand{\bbh}{\color{blue}\textbf}  % blue bold highlight
 \newcommand{\bch}{\color{blue}\it}  % blue italics
 \newcommand{\ech}{\color{black}\rm}
-\input{imgtemplate.tex}
 \def\imgdir{../../results/test-sim-6-7-7-test/pthin4-batchprop0.01-alpha1.0-N20000}
 
 % Title Settings
@@ -141,6 +140,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \item $\delta_1 \sim \TN^+(1.0, 0.1)$
     \item $\sigma^2_i \sim \InvGamma^+(1.0, 0.1)$
     \item $\phi=0.1$
+    \item 1\% of data in each sample are used to sample from trained prior, and
+      $M=4$ was used.
   \end{itemize}
 \item \textbf{Temperature}: 40001
 \end{itemize}
