--- a/runs/sim-study/notes/test-sim-6-7-9/test-sim-6-7-9.tex
+++ b/runs/sim-study/notes/test-sim-6-7-9/test-sim-6-7-9.tex
@@ -158,6 +158,16 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     iterations for the temperature 40001, for $\phi=0.1$.}
   \label{fig:ll}
 \end{figure}
+
+\newpage
+\section{Posterior mean of $Z$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{Zmean.pdf}{0.15}
+  \end{center}
+  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  \label{fig:z1est}
+\end{figure}
  
 \newpage
 \section{Posterior estimate of $Z_1$}
