changed the captions and added TODOs

--- a/runs/sim-study/notes/test-sim-6-7-8/test-sim-6-7-8.tex
+++ b/runs/sim-study/notes/test-sim-6-7-8/test-sim-6-7-8.tex
@@ -132,7 +132,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \item ($\sigma^2_i)^\true=0.5$, $N=(2000, 2000)$
   \item 500 burn-in, followed by 2000 iterations, and every other sample was
     kept (1000 samples total).
-  \item \textbf{Some Priors:}
+  \item Computation time for each chains was was approximately 4 hours.
+  \item \textbf{Some Priors / setup:}
   \begin{itemize}
     \item $w^\star_{i,k} \sim \Gam(\text{shape}=1/2, \text{rate}=1/2)$
     \item $p_c \sim \text{Beta}(1, 1)$
@@ -168,8 +169,9 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Zmean.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
-  \label{fig:z1est}
+  % TODO: Write more?
+  \caption{Posterior mean of $Z$. For $\phi=0$, the truth is never recovered.}
+  \label{fig:zmean}
 \end{figure}
  
 \newpage
@@ -178,7 +180,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Z1.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:z1est}
 \end{figure}
 
@@ -188,7 +191,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Z2.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:z2est}
 \end{figure}
 
@@ -198,7 +202,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y1.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:y1est}
 \end{figure}
 
@@ -208,7 +213,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y2.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:y2est}
 \end{figure}
 
@@ -218,7 +224,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{mus_trace.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:mus-trace}
 \end{figure}
 
@@ -228,7 +235,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{mus.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:mus}
 \end{figure}
 
@@ -239,7 +247,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{sig2_trace.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:sig2-trace}
 \end{figure}
 
@@ -249,7 +258,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{sig2.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:sig2}
 \end{figure}
 
@@ -259,7 +269,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{dden/dden_i1_j1.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:ddi1j1}
 \end{figure}
 
@@ -269,7 +280,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{dden/dden_i1_j2.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:ddi1j2}
 \end{figure}
 
@@ -279,7 +291,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{dden/dden_i2_j1.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:ddi2j1}
 \end{figure}
 
@@ -289,7 +302,8 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{dden/dden_i2_j2.pdf}{0.15}
   \end{center}
-  \caption{The truth for $Z$ and W are recovered. Acceptance rate: \textbf{98\%}}
+  % TODO: Write more?
+  \caption{}
   \label{fig:ddi2j2}
 \end{figure}
 
@@ -303,7 +317,7 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
       \includegraphics[scale=.5]{\imgdir/dataseed1-mcmcseed1-phi0.0/img/missmech_2.pdf} \\
     \end{tabular}
   \end{center}
-\label{fig:sigtrace}
+\label{fig:missmech}
 \end{figure}
 
 
