added trace for p

--- a/runs/sim-study/notes/test-sim-6-7-12/test-sim-6-7-12.tex
+++ b/runs/sim-study/notes/test-sim-6-7-12/test-sim-6-7-12.tex
@@ -228,7 +228,7 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
 \end{figure}
 
 \newpage
-\section{Trace plots for $p_i$}
+\section{Box plots for $p_i$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
     \imgtemplate{p.pdf}{0.15}
@@ -237,6 +237,28 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \caption{The posterior mean of $p_i$ is usually between 0.2 and 0.4, and
   sometimes between 0.4 and 0.5. The spread is large.}
   \label{fig:ppost}
+\end{figure}
+
+\newpage
+\section{Trace plots for $p_1$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{p1_trace.pdf}{0.15}
+  \end{center}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:p1trace}
+\end{figure}
+
+\newpage
+\section{Trace plots for $p_2$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{p2_trace.pdf}{0.15}
+  \end{center}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:p2trace}
 \end{figure}
 
 \newpage
